feat: designer logs filter (#828)

--- a/core/src/ten_manager/designer_frontend/public/locales/en-US/common.json
+++ b/core/src/ten_manager/designer_frontend/public/locales/en-US/common.json
@@ -141,7 +141,10 @@
     },
     "logViewer": {
       "title": "Log Viewer",
-      "appInstall": "App Install"
+      "appInstall": "App Install",
+      "filteredByAddon": "Filter logs by Addon",
+      "noAddons": "No Avaliable Addons",
+      "noMatchedAddons": "No matched addons"
     },
     "default": {
       "defaultLabelForAppRun": "Default label for app run",
