feat: ext tags display & search (#859)

--- a/core/src/ten_manager/designer_frontend/public/locales/en-US/common.json
+++ b/core/src/ten_manager/designer_frontend/public/locales/en-US/common.json
@@ -270,7 +270,8 @@
     "versionHistory": "Version History",
     "selectVersion": "Select a version",
     "versionLatest": "Latest",
-    "localAddonTip": "(local)"
+    "localAddonTip": "(local)",
+    "tags": "Tags"
   },
   "statusBar": {
     "appsLoadedWithCount": "{{count}} app(s) loaded",
