fix(designer fe): logviewer backstage widget (#896)

--- a/core/src/ten_manager/designer_frontend/public/locales/en-US/common.json
+++ b/core/src/ten_manager/designer_frontend/public/locales/en-US/common.json
@@ -146,9 +146,10 @@
       "title": "Log Viewer",
       "appInstall": "App Install",
       "filteredByAddon": "Filter logs by Addon",
-      "noAddons": "No Avaliable Addons",
+      "noAddons": "No Available Addons",
       "noMatchedAddons": "No matched addons",
-      "noLogs": "No logs to display."
+      "noLogs": "No logs to display.",
+      "cleanLogs": "Clean Logs"
     },
     "default": {
       "defaultLabelForAppRun": "Default label for app run",
