--- a/core/src/ten_manager/designer_frontend/public/locales/zh-TW/common.json
+++ b/core/src/ten_manager/designer_frontend/public/locales/zh-TW/common.json
@@ -148,7 +148,8 @@
       "filteredByAddon": "依附加元件篩選日誌",
       "noAddons": "無可用附加元件",
       "noMatchedAddons": "無符合的附加元件",
-      "noLogs": "無日誌顯示"
+      "noLogs": "無日誌顯示",
+      "cleanLogs": "清空日誌"
     },
     "default": {
       "defaultLabelForAppRun": "預設應用程式運行標籤",
