--- a/core/src/ten_manager/designer_frontend/public/locales/zh-CN/common.json
+++ b/core/src/ten_manager/designer_frontend/public/locales/zh-CN/common.json
@@ -148,7 +148,8 @@
       "filteredByAddon": "按插件筛选日志",
       "noAddons": "无可用插件",
       "noMatchedAddons": "无匹配插件",
-      "noLogs": "暂无日志"
+      "noLogs": "暂无日志",
+      "cleanLogs": "清除日志"
     },
     "default": {
       "defaultLabelForAppRun": "默认应用运行标签",
