feat: designer rtc (#835)
Co-authored-by: Hu Yueh-Wei <wei.hu.tw@gmail.com>
Co-authored-by: czhen <56986964+shczhen@users.noreply.github.com>

--- a/core/src/ten_manager/designer_frontend/public/locales/en-US/common.json
+++ b/core/src/ten_manager/designer_frontend/public/locales/en-US/common.json
@@ -50,6 +50,8 @@
     "menuExtension": {
       "title": "Extensions",
       "openExtensionStore": "Open Extension Store",
+      "startRTCInteraction": "Talk to TEN AI Agent",
+      "configTrulienceAvatar": "Configure Trulience Avatar",
       "about": "About Extensions"
     },
     "language": {
@@ -109,7 +111,9 @@
     "deleteConnectionConfirmation": "Are you sure you want to delete the connection?",
     "deleteConnectionSuccess": "Connection deleted successfully",
     "deleteConnectionFailed": "Failed to delete connection",
-    "replaceNode": "Replace Node with ..."
+    "replaceNode": "Replace Node with ...",
+    "manageApps": "Manage Apps",
+    "runApp": "Run"
   },
   "toast": {
     "saveFileSuccess": "File saved successfully",
@@ -178,7 +182,9 @@
       "templateVersionDescription": "Select the template version for the app.",
       "appName": "App Name",
       "appNameDescription": "Enter the name for the app.",
-      "baseDirDescription": "Select the base directory for the app."
+      "baseDirDescription": "Select the base directory for the app.",
+      "run_opts": "Options",
+      "run_with_agent": "Run with TEN Agent"
     },
     "graph": {
       "title": "Node",
@@ -274,6 +280,24 @@
     "localAddonTip": "(local)",
     "tags": "Tags"
   },
+  "rtcInteraction": {
+    "title": "Realtime Voice AI Agent"
+  },
+  "trulienceConfig": {
+    "title": "Trulience Avatar Configuration",
+    "enabled": "Enabled",
+    "trulienceAvatarId": "Trulience Avatar ID",
+    "trulienceAvatarToken": "Trulience Avatar Token",
+    "trulienceSdkUrl": "Trulience SDK URL",
+    "trulienceAnimationURL": "Trulience Animation URL"
+  },
+  "rtc": {
+    "videoSource": {
+      "camera": "Camera",
+      "screen": "Screen",
+      "cameraPlaceholder": "Select a camera"
+    }
+  },
   "statusBar": {
     "appsLoadedWithCount": "{{count}} app(s) loaded",
     "appsError": "Failed to get apps",
@@ -308,6 +332,9 @@
       "placeholder": "Search or create new",
       "noItems": "No items",
       "enterValueToCreate": "Enter a value to create a new one"
+    },
+    "messageList": {
+      "noMessages": "No messages yet."
     }
   }
 }
