--- a/core/src/ten_manager/designer_frontend/public/locales/ja-JP/common.json
+++ b/core/src/ten_manager/designer_frontend/public/locales/ja-JP/common.json
@@ -50,6 +50,8 @@
     "menuExtension": {
       "title": "拡張機能",
       "openExtensionStore": "拡張機能ストアを開く",
+      "startRTCInteraction": "TEN AIエージェントと話す",
+      "configTrulienceAvatar": "Trulienceアバターを設定",
       "about": "拡張機能について"
     },
     "language": {
@@ -109,7 +111,9 @@
     "deleteConnectionConfirmation": "接続を削除してもよろしいですか？",
     "deleteConnectionSuccess": "接続の削除に成功しました",
     "deleteConnectionFailed": "接続の削除に失敗しました",
-    "replaceNode": "ノードを置き換え..."
+    "replaceNode": "ノードを置き換え...",
+    "manageApps": "アプリを管理",
+    "runApp": "実行"
   },
   "toast": {
     "saveFileSuccess": "ファイルの保存に成功しました",
@@ -178,7 +182,9 @@
       "templateVersionDescription": "アプリのテンプレートバージョンを選択してください。",
       "appName": "アプリ名",
       "appNameDescription": "アプリの名前を入力してください。",
-      "baseDirDescription": "アプリのベースディレクトリを選択してください。"
+      "baseDirDescription": "アプリのベースディレクトリを選択してください。",
+      "run_opts": "オプション",
+      "run_with_agent": "エージェントで実行"
     },
     "graph": {
       "title": "ノード",
@@ -274,6 +280,24 @@
     "localAddonTip": "(ローカル)",
     "tags": "タグ"
   },
+  "rtcInteraction": {
+    "title": "リアルタイム音声AIエージェント"
+  },
+  "trulienceConfig": {
+    "title": "Trulienceアバターの設定",
+    "enabled": "有効",
+    "trulienceAvatarId": "Trulience Avatar ID",
+    "trulienceAvatarToken": "Trulience Avatar Token",
+    "trulienceSdkUrl": "Trulience SDK URL",
+    "trulienceAnimationURL": "Trulience Animation URL"
+  },
+  "rtc": {
+    "videoSource": {
+      "camera": "カメラ",
+      "screen": "画面",
+      "cameraPlaceholder": "カメラを選択"
+    }
+  },
   "statusBar": {
     "appsLoadedWithCount": "{{count}}個のアプリが読み込まれています",
     "appsError": "アプリの取得に失敗しました",
@@ -308,6 +332,9 @@
       "placeholder": "検索または新規作成",
       "noItems": "項目がありません",
       "enterValueToCreate": "新しい項目を作成するには値を入力してください"
+    },
+    "messageList": {
+      "noMessages": "メッセージがありません"
     }
   }
 }
