fix(designer fe): external tools menu (#923)

--- a/core/src/ten_manager/designer_frontend/public/locales/en-US/common.json
+++ b/core/src/ten_manager/designer_frontend/public/locales/en-US/common.json
@@ -54,6 +54,9 @@
       "configTrulienceAvatar": "Configure Trulience Avatar",
       "about": "About Extensions"
     },
+    "menuTenAgentTools": {
+      "title": "TEN Agent Tools"
+    },
     "language": {
       "title": "Language",
       "enUS": "English",
